{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 46,
  "lineage": "964a1f6b-30d6-f4ba-17b7-a93af9d8c245",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lcb-php-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01fee56b22f308154",
            "arn": "arn:aws:ec2:us-west-2:604118060582:instance/i-0f5ee6a47225f6544",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f5ee6a47225f6544",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "lcb-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-039790ea472ad5059",
            "private_dns": "ip-10-0-128-38.us-west-2.compute.internal",
            "private_ip": "10.0.128.38",
            "public_ip": "54.202.45.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01736c830fc9c140d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058cd1c8164883bf1",
            "tags": {
              "Name": "lcb-php-instance"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "lcb-php-instance-volume"
            },
            "vpc_security_group_ids": [
              "sg-0f1c1b832e8ec0c1a"
            ]
          },
          "dependencies": [
            "aws_security_group.lcb-web-sg",
            "aws_subnet.lcb-public-subnet",
            "aws_vpc.lcb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lcb-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:604118060582:internet-gateway/igw-0e95509e44693620a",
            "id": "igw-0e95509e44693620a",
            "owner_id": "604118060582",
            "tags": {
              "Name": "lcb-igw"
            },
            "vpc_id": "vpc-062f023e14ef3e20b"
          },
          "dependencies": [
            "aws_vpc.lcb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "lcb-network-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:604118060582:network-acl/acl-03d33d4d36848b30c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03d33d4d36848b30c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "604118060582",
            "subnet_ids": [
              "subnet-013c75856a1e3067c",
              "subnet-058cd1c8164883bf1",
              "subnet-0b6d161d5b2cc4a36"
            ],
            "tags": {
              "Name": "LCB ACL"
            },
            "vpc_id": "vpc-062f023e14ef3e20b"
          },
          "dependencies": [
            "aws_subnet.lcb-private-subnet-a",
            "aws_subnet.lcb-private-subnet-b",
            "aws_subnet.lcb-public-subnet",
            "aws_vpc.lcb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "lcb-public-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e95509e44693620a",
            "id": "r-rtb-02f9eec4b62a969301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f9eec4b62a96930",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.lcb-igw",
            "aws_route_table.lcb-public-rt",
            "aws_vpc.lcb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lcb-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02f9eec4b62a96930",
            "owner_id": "604118060582",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lcb-public-rt"
            },
            "vpc_id": "vpc-062f023e14ef3e20b"
          },
          "dependencies": [
            "aws_vpc.lcb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lcb-public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093388ff5e370d23a",
            "route_table_id": "rtb-02f9eec4b62a96930",
            "subnet_id": "subnet-058cd1c8164883bf1"
          },
          "dependencies": [
            "aws_route_table.lcb-public-rt",
            "aws_subnet.lcb-public-subnet",
            "aws_vpc.lcb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lcb-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:604118060582:security-group/sg-015f1cf601af9de7b",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015f1cf601af9de7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "lcb-db-sg",
            "name_prefix": "",
            "owner_id": "604118060582",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lcb-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-062f023e14ef3e20b"
          },
          "dependencies": [
            "aws_vpc.lcb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lcb-web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:604118060582:security-group/sg-0f1c1b832e8ec0c1a",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1c1b832e8ec0c1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lcb-sg",
            "name_prefix": "",
            "owner_id": "604118060582",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lcb-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-062f023e14ef3e20b"
          },
          "dependencies": [
            "aws_vpc.lcb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lcb-private-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:604118060582:subnet/subnet-013c75856a1e3067c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.126.0/24",
            "id": "subnet-013c75856a1e3067c",
            "map_public_ip_on_launch": false,
            "owner_id": "604118060582",
            "tags": {
              "Name": "lcb-private-subnet-a"
            },
            "vpc_id": "vpc-062f023e14ef3e20b"
          },
          "dependencies": [
            "aws_vpc.lcb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lcb-private-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:604118060582:subnet/subnet-0b6d161d5b2cc4a36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.127.0/24",
            "id": "subnet-0b6d161d5b2cc4a36",
            "map_public_ip_on_launch": false,
            "owner_id": "604118060582",
            "tags": {
              "Name": "lcb-private-subnet-b"
            },
            "vpc_id": "vpc-062f023e14ef3e20b"
          },
          "dependencies": [
            "aws_vpc.lcb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lcb-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:604118060582:subnet/subnet-058cd1c8164883bf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.128.0/24",
            "id": "subnet-058cd1c8164883bf1",
            "map_public_ip_on_launch": false,
            "owner_id": "604118060582",
            "tags": {
              "Name": "lcb-public-subnet"
            },
            "vpc_id": "vpc-062f023e14ef3e20b"
          },
          "dependencies": [
            "aws_vpc.lcb-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lcb-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:604118060582:vpc/vpc-062f023e14ef3e20b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c07ef05e35e2eb55",
            "default_route_table_id": "rtb-0f042b566f443f1ec",
            "default_security_group_id": "sg-0d3a639398ed1da10",
            "dhcp_options_id": "dopt-4712ec3f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-062f023e14ef3e20b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f042b566f443f1ec",
            "owner_id": "604118060582",
            "tags": {
              "Name": "US-West-2-lcb-vpc"
            }
          }
        }
      ]
    }
  ]
}